Fix filter groups modal z-index on mobile

--- a/plugins/bcc-login/src/filtering.css
+++ b/plugins/bcc-login/src/filtering.css
@@ -1,76 +1,73 @@
 .bcc-filter {
-    position: relative;
+  position: relative;
 }
 
 .bcc-filter ul {
-    padding-left: 0 !important;
-    margin-bottom: 0 !important;
-    display: flex;
-    flex-flow: column nowrap;
+  padding-left: 0 !important;
+  margin-bottom: 0 !important;
+  display: flex;
+  flex-flow: column nowrap;
 }
 
 .bcc-filter li {
-    position: relative;
-    margin-bottom: 8px !important;
+  position: relative;
+  margin-bottom: 8px !important;
 }
 
 .bcc-filter .bcc-checkbox {
-    border: 1px solid var(--border-on-primary);
+  border: 1px solid var(--border-on-primary);
 }
 
 .bcc-filter #close-bcc-groups {
-    display: block;
-    margin-bottom: 1rem;
+  display: block;
+  margin-bottom: 1rem;
 }
 
-
 .bcc-filter #bcc-filter-groups.active {
-    display: block;
+  display: block;
 }
 
 body.no-scroll {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .bcc-target-groups__filtered {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  margin-bottom: 16px;
 }
 
-
-
 @media (max-width: 767px) {
-    .bcc-filter #bcc-filter-groups {
-        position: fixed;
-        inset: 0;
-        top: var(--wp-admin--admin-bar--height);
-        z-index: 99999;
-        background: #fff;
-        padding: 16px;
-        text-align: left;
-        overflow-y: auto;
-        display: none;
-    }
+  .bcc-filter #bcc-filter-groups {
+    position: fixed;
+    inset: 0;
+    top: var(--wp-admin--admin-bar--height);
+    z-index: 999999;
+    background: #fff;
+    padding: 16px;
+    text-align: left;
+    overflow-y: auto;
+    display: none;
+  }
 }
 
 @media (min-width: 768px) {
-    @supports (text-shadow: 1px 0 0 #000) {
-        .bcc-filter label:hover,
-        .bcc-filter input:checked+label {
-            font-weight: normal;
-            text-shadow: 0.2px 0 0 currentColor;
-        }
+  @supports (text-shadow: 1px 0 0 #000) {
+    .bcc-filter label:hover,
+    .bcc-filter input:checked + label {
+      font-weight: normal;
+      text-shadow: 0.2px 0 0 currentColor;
     }
+  }
 
-    .bcc-filter #close-bcc-groups,
-    .bcc-filter #toggle-bcc-filter {
-        display: none;
-    }
+  .bcc-filter #close-bcc-groups,
+  .bcc-filter #toggle-bcc-filter {
+    display: none;
+  }
 
-    .bcc-filter #bcc-filter-groups {
-        display: block;
-        position: relative;
-    }
+  .bcc-filter #bcc-filter-groups {
+    display: block;
+    position: relative;
+  }
 }
